Use setuptools to install, so 'import compy' can be used systemwide. Also getting ready for publication.

--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,8 @@ Todo:
 
 Fix:
 
-- challenges don't show in html
+- keep examples as py, convert to html at the end
+- setuptools
+- comments in examples
 
-Done:
 
